--- a/gui/utils/css/style.css
+++ b/gui/utils/css/style.css
@@ -14,6 +14,21 @@
     font-size: 16px;
 }
 
+.topSmallLabels {
+    font-size: 13px;
+    font-weight: bold;
+}
+
+.bottomSmallLabels {
+    font-weight: bold;
+    font-size: 19px;
+    color: red;
+}
+
+.topSmallLabels {
+    color: #ffffff;
+}
+
 .inputs:focus {
     background-color: #09203f;
     border: 1px solid #000;
